--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,17 +5,16 @@ repos:
     rev: stable
     hooks:
       - id: black
-        args: ["--line-length=91"]
 
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.0a2
     hooks:
       - id: flake8
 
-  - repo: https://github.com/timothycrosley/isort
-    rev: 4.3.21
+  - repo: https://github.com/asottile/reorder_python_imports
+    rev: v2.3.0
     hooks:
-      - id: isort
+      - id: reorder-python-imports
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
