--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 default_language_version:
   python: python3.8
+
 repos:
   - repo: https://github.com/ambv/black
     rev: stable
@@ -11,10 +12,10 @@ repos:
     hooks:
       - id: flake8
 
-  - repo: https://github.com/asottile/reorder_python_imports
-    rev: v2.3.0
+  - repo: https://github.com/timothycrosley/isort
+    rev: 5.3.2
     hooks:
-      - id: reorder-python-imports
+      - id: isort
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
