Update tox and pre-commit configurations

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py36,py37,py38,pypy3
+envlist = py35,py36,py37,py38,py39,pypy3
 skipsdist = True
 
 [testenv]
@@ -7,3 +7,8 @@ deps = -rrequirements-test.txt
 commands =
     coverage run -m pytest {posargs}
     coverage report
+
+[testenv:pre-commit]
+skip_install = true
+deps = pre-commit
+commands = pre-commit run --all-files
