--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,31 +1,25 @@
 trigger:
-- master
+  branches:
+    include: [master, test-*]
+  tags:
+    include: ['*']
 
-pool:
-  vmImage: 'ubuntu-latest'
-strategy:
-  matrix:
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
-    Python38:
-      python.version: '3.8'
+resources:
+  repositories:
+    - repository: aleksac
+      type: github
+      endpoint: AleksaC
+      name: AleksaC/azure-pipelines-templates
+      ref: refs/tags/v0.0.2
 
-steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
+jobs:
+  - template: jobs/python-tests.yml@aleksac
+    parameters:
+      toxenvs: [ py35, py36, py37, py38, py39, pypy3 ]
 
-- script: |
-    python -m pip install --upgrade pip
-    pip install -r requirements-test.txt
-  displayName: 'Install dependencies'
+  - template: jobs/python-tests.yml@aleksac
+    parameters:
+      os: windows
+      toxenvs: [ py37 ]
 
-- script: |
-    coverage run -m pytest
-    coverage report
-  displayName: 'pytest'
+  - template: jobs/pre-commit.yml@aleksac
